--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
    <li><a href="#about" id="quint" class="cir_border">About</a>
   </li>
    <li>
-    <a href="#webchat-container" onclick="openChatbot()" id="quint" class="cir_border">Chat With AI</a>
+    <a href="#webchat-container" onclick="openChatbot()" id="quint" class="cir_border">Talk to Chatbot</a>
     <div id="webchat-container" style="position: relative; width: 25%; height: 80%;">
       <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
       <script>
